--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "react": "^18.1.0",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18.1.0",
     "react-google-login": "^5.2.2",
     "react-redux": "^8.0.2",
