--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.1.0",
-    "react-google-login": "^5.2.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-stomp-hooks": "^2.1.0",
     "sass": "^1.52.1",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
