--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "react": "^18.1.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.1.0",
+    "react-progressbar-semicircle": "^1.2.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-stomp-hooks": "^2.1.0",
+    "react-wavify": "^1.6.1",
     "sass": "^1.52.1",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
