--- a/package.json
+++ b/package.json
@@ -29,14 +29,17 @@
     "react-stomp-hooks": "^2.1.0",
     "react-wavify": "^1.6.1",
     "sass": "^1.52.1",
+    "serve": "^14.0.1",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
